--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -2,6 +2,7 @@
 
 %card {
 	@extend .m-large-tb, .shadow-light;
+	overflow: hidden;
 }
 
 .card {
